--- a/index/checkout.css
+++ b/index/checkout.css
@@ -244,3 +244,15 @@ body {
   font-weight: 500;
   text-align: center;
 }
+
+.checkout-payment .payment-option {
+  display: grid;
+  grid-template-columns: 20px 40px 1fr;
+  align-items: center;
+  gap: 12px;
+
+  padding: 0.9rem 1rem;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
